--- a/deploy/kubernetes/helm-chart/values.yaml
+++ b/deploy/kubernetes/helm-chart/values.yaml
@@ -13,9 +13,10 @@ istio:
 ingress:
     annotations:
         kubernetes.io/ingress.class: nginx
+        cert-manager.io/cluster-issuer: letsencrypt-prod
     labels: {}
-    host: ''
-    tlsSecretName: ''
+    host: 'sock-shop.axel-upcloud-2.dev-ck8s.com'
+    tlsSecretName: 'sock-shop-cert'
 
 cartsdb:
     image:
@@ -23,7 +24,7 @@ cartsdb:
         tag: 4.4.0
     resources:
         requests:
-            cpu: 500m
+            cpu: 300m
             memory: 512Mi
         limits:
             cpu: 500m
@@ -39,10 +40,10 @@ carts:
     containerPort: 80
     resources:
         limits:
-            cpu: 300m
+            cpu: 3
             memory: 2000Mi
         requests:
-            cpu: 300m
+            cpu: 1500m
             memory: 2000Mi
 
 cataloguedb:
@@ -64,10 +65,10 @@ catalogue:
     containerPort: 80
     resources:
         limits:
-            cpu: 100m
+            cpu: 300m
             memory: 100Mi
         requests:
-            cpu: 100m
+            cpu: 50m
             memory: 100Mi
 
 frontend:
@@ -77,7 +78,7 @@ frontend:
         tag: 0.3.12
     resources:
         limits:
-            cpu: 300m
+            cpu: 1
             memory: 1000Mi
         requests:
             cpu: 100m
@@ -103,7 +104,7 @@ ordersdb:
         tag: 4.4.0
     resources:
         requests:
-            cpu: 500m
+            cpu: 300m
             memory: 512Mi
         limits:
             cpu: 500m
@@ -119,10 +120,10 @@ orders:
     containerPort: 80
     resources:
         limits:
-            cpu: 500m
+            cpu: 2
             memory: 2000Mi
         requests:
-            cpu: 200m
+            cpu: 1500m
             memory: 2000Mi
 
 payment:
@@ -148,7 +149,7 @@ queuemaster:
             cpu: 300m
             memory: 1000Mi
         requests:
-            cpu: 300m
+            cpu: 200m
             memory: 1000Mi
 
 rabbitmq:
@@ -188,7 +189,7 @@ shipping:
             cpu: 300m
             memory: 2000Mi
         requests:
-            cpu: 300m
+            cpu: 200m
             memory: 2000Mi
 
 userdb:
@@ -210,7 +211,7 @@ user:
     containerPort: 80
     resources:
         limits:
-            cpu: 300m
+            cpu: 600m
             memory: 1000Mi
         requests:
             cpu: 100m
