--- a/deploy/kubernetes/manifests-loadtest/loadtest-dep.yaml
+++ b/deploy/kubernetes/manifests-loadtest/loadtest-dep.yaml
@@ -25,6 +25,6 @@ spec:
       - name: load-test
         image: weaveworksdemos/load-test:0.1.1
         command: ["/bin/sh"]
-        args: ["-c", "while true; do locust --host http://front-end.sock-shop.svc.cluster.local -f /config/locustfile.py --clients 5 --hatch-rate 5 --num-request 100 --no-web; done"]
+        args: ["-c", "while true; do locust --host sock-shop.axel-upcloud-2.dev-ck8s.com -f /config/locustfile.py --clients 10 --hatch-rate 5 --num-request 100 --no-web; done"]
       nodeSelector:
         beta.kubernetes.io/os: linux
