--- a/deploy/kubernetes/helm-chart/templates/cart-db-dep.yaml
+++ b/deploy/kubernetes/helm-chart/templates/cart-db-dep.yaml
@@ -41,4 +41,5 @@ spec:
         - name: tmp-volume
           emptyDir: {}
         - name: data-volume
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: carts-db
