--- a/deploy/kubernetes/helm-chart/templates/orders-db-dep.yaml
+++ b/deploy/kubernetes/helm-chart/templates/orders-db-dep.yaml
@@ -41,7 +41,5 @@ spec:
         - name: tmp-volume
           emptyDir: {}
         - name: data-volume
-          emptyDir: {}
-
-          # persistentVolumeClaim:
-          #   claimName: orders-db
+          persistentVolumeClaim:
+            claimName: orders-db
