--- a/deploy/kubernetes/helm-chart/values.yaml
+++ b/deploy/kubernetes/helm-chart/values.yaml
@@ -15,7 +15,7 @@ ingress:
         kubernetes.io/ingress.class: nginx
         cert-manager.io/cluster-issuer: letsencrypt-prod
     labels: {}
-    host: 'sock-shop.axel-upcloud-2.dev-ck8s.com'
+    host: 'sock-shop.wallace.dev-ck8s.com'
     tlsSecretName: 'sock-shop-cert'
 
 cartsdb:
@@ -40,11 +40,11 @@ carts:
     containerPort: 80
     resources:
         limits:
-            cpu: 3
+            cpu: 2
             memory: 2000Mi
         requests:
-            cpu: 1500m
-            memory: 2000Mi
+            cpu: 1000m
+            memory: 500Mi
 
 cataloguedb:
     image:
@@ -123,8 +123,8 @@ orders:
             cpu: 2
             memory: 2000Mi
         requests:
-            cpu: 1500m
-            memory: 2000Mi
+            cpu: 500m
+            memory: 500Mi
 
 payment:
     image:
